library/pod-security-policy/host-network-ports/samples/psp-host-network-ports/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: host-network-ports
tests:
- name: use-of-host-networking-ports-blocked
  template: template.yaml
  constraint: samples/psp-host-network-ports/constraint.yaml
